<resources>
    <string name="app_name">Take Trash</string>
    <string name="texto_bemvindo">Olá, seja bem vindo!</string>
    <string name="texto_bemvindo2">Vamos criar sua conta?</string>
    <string name="button_criar">Criar</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="txt_tela_criar_1">Ok, vamos lá!</string>
    <string name="txt_tela_criar_2">Que tipo de usuário você é?</string>
    <string name="btn_criar_domestico">Doméstico</string>
    <string name="btn_criar_sindico">Síndico</string>
    <string name="btn_criar_catador">Catador</string>
    <string name="txt_criando_conta1">Preencha as informações abaixo:</string>
    <string name="entry_criandoconta1_nome">Nome</string>
    <string name="entry_criandoconta1_sobrenome">Sobrenome</string>
    <string name="btn_criandoconta1_voltar">Voltar</string>
    <string name="btn_criandoconta1_proximo">Proximo</string>
    <string name="txt_criandoconta1_sexo">Sexo</string>
    <string name="txt_criandoconta2_sexo">Sexo</string>
    <string name="criandoConta2_radiobutton_masculino">M</string>
    <string name="criandoConta2_radiobutton_feminino">F</string>
    <string name="entry_criandoconta2_data">DD/MM/AAAA</string>
    <string name="entry_criandoconta3_email">Email</string>
    <string name="entry_criandoconta3_senha1">Digite sua senha</string>
    <string name="entry_criandoconta3_senha2">Repita sua senha</string>
    <string name="txtCriandoConta4link">Ou toque aqui para digitar.</string>
    <string name="txtCriandoConta4">Informe sua localização:</string>
    <string name="entry_criandoconta44_rua">Rua</string>
    <string name="entry_criandoconta44_bairro">Bairro</string>
    <string name="entry_criandoconta44_numero">Número</string>
    <string name="entry_criandoconta44_complemento">Complemento</string>
    <string name="txtCriandoConta5_txt1">Que tal colocar uma foto?</string>
    <string name="txtCriandoConta5_txt2">Você pode escolher mais tarde.</string>
    <string name="entry_teladelogin_email">Email</string>
    <string name="entry_teladelogin_senha">Senha</string>
    <string name="btn_teladelogin_voltar">Voltar</string>
    <string name="btn_teladelogin_proximo">Proximo</string>
    <string name="txtTeladelogin_linkado">Esqueci minha senha</string>
    <string name="txt_esquecisenha">Coloque seu email no campo abaixo.</string>
    <string name="btn_esquecisenha_proximo">Enviar</string>
    <string name="btn_esquecisenha_voltar">Voltar</string>
    <string name="txt_esquecisenha2_txt1">Enviamos para seu email</string>
    <string name="txt_esquecisenha2_txt2">as instruções para redefinir sua senha.</string>
    <string name="btn_esquecisenha2_inicio">Início</string>
    <string name="title_activity_act_telaprincipal"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Maresa Paiva</string>
    <string name="nav_header_subtitle">ID: 002365</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_bemvindo_linkado">Já sou cadastrado.</string>
    <string name="telaprincipal_button_solicitarcoleta">Solicitar Coleta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_criandoconta5_selecionarimg">Selecionar Imagem</string>
    <string name="tela_principal_btn_Solicitarcoleta">Solicitar Coleta</string>
    <string name="tela_meu_perfil_btn_pegar_foto">Alterar Foto</string>
    <string name="title_activity_act__solicitarcoleta">Act_Solicitarcoleta</string>
    <string name="btn_act_solicitarcoleta_cancelar">Cancelar</string>
    <string name="fragment_meuperfil_nome">Nome</string>
    <string name="fragment_meuperfil_sobrenome">Sobrenome</string>
    <string name="fragment_meuperfil_sexo">Sexo</string>
    <string name="fragment_meuperfil_email">E-mail</string>
    <string name="fragment_meuperfil_datanasc">Data de Nascimento</string>
    <string name="fragment_meuperfil_btn_redefinir_localizacao">Redefinir Localização</string>
    <string name="fragment_meuperfil_btn_redefinirsenha">Redefinir Senha</string>
    <string name="fragmento_contato_txt_nome">Nome</string>
    <string name="fragmento_contato_txt_sobrenome">Sobrenome</string>
    <string name="fragmento_contato_txt_assunto">Assunto</string>
    <string name="fragmento_contato_txt">Mensagem</string>
    <string name="fragmento_historico_txt_catador">Catador:</string>
    <string name="fragmento_historico_txt_id">ID:</string>
    <string name="fragmento_historico_txt_pontos">Pontos Obtidos:</string>
    <string name="fragmento_historico_txt_data">Data:</string>
    <string name="btn_Qrcode_qrcode">Scan Qrcode</string>
    <string name="txt_Qrcode">Localize na sua etiqueta o Qrcode como na imagem e clicando no botão abaixo escaneie o código QR </string>
    <string name="Act_Informacao_catador_txt1">Catador responsável pela coleta:</string>
    <string name="Act_Informacao_catador_txt_rua">Rua:</string>
    <string name="Act_Informacao_catador_txt_bairro">Bairro:</string>
    <string name="Act_Informacao_catador_txt_numero">Número:</string>
    <string name="Act_Informacao_catador_txt_">Contato:</string>
    <string name="Act_Informacao_catador_txt_endereco">Endereço de Retirada</string>
    <string name="Act_Informacao_catador_btn_voltar">Voltar</string>
    <string name="fragment_principal_btn_trocar_pontos">Trocar Pontos</string>


</resources>
