<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Act_esquecisenha"
    android:background="@drawable/fundo">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="157dp"
        android:layout_height="118dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        app:srcCompat="@drawable/logobranca" />

    <TextView
        android:id="@+id/txt_esquecisenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_esquecisenha"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/entry_tela_esquecisenha_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/color_de_fundo_botao"
        android:drawableLeft="@drawable/ic_item_criandoconta3_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/entry_teladelogin_email"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_esquecisenha" />


    <Button
        android:id="@+id/btn_esquecisenha_voltar"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/color_de_fundo_botao"
        android:onClick="voltar"
        android:text="@string/btn_esquecisenha_voltar"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/entry_tela_esquecisenha_email"
        app:layout_constraintTop_toBottomOf="@+id/entry_tela_esquecisenha_email" />

    <Button
        android:id="@+id/btn_esquecisenha_enviar"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/color_de_fundo_botao"
        android:onClick="enviar"
        android:text="@string/btn_esquecisenha_proximo"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="@+id/entry_tela_esquecisenha_email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entry_tela_esquecisenha_email" />


</android.support.constraint.ConstraintLayout>